refactor!: Consolidate constants

--- a/notebooks/1r-transcribe-diarization.ipynb
+++ b/notebooks/1r-transcribe-diarization.ipynb
@@ -31,6 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
     "import warnings\n",
     "import justsdk\n",
     "import pandas as pd\n",
@@ -42,9 +44,9 @@
     "from IPython.display import Audio, display\n",
     "from pyannote.audio import Pipeline\n",
     "from typing import Optional\n",
-    "from _constants import HF_TOKEN, SAMPLE_DATA_DIR, MODEL_DIR\n",
+    "from configs._constants import HF_TOKEN, SAMPLE_DATA_DIR, MODEL_DIR\n",
     "from pyannote.audio.pipelines.utils.hook import ProgressHook\n",
-    "from scripts import Utils"
+    "from src.utils import Utils"
    ]
   },
   {
@@ -60,6 +62,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ROOT = Path().resolve().parent\n",
+    "sys.path.append(str(ROOT))\n",
+    "os.chdir(ROOT)\n",
+    "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "TARGET_SAMPLE = \"project-proposal.mp3\"\n",
@@ -216,8 +222,8 @@
     "        \"avg_logprob\": segment.avg_logprob,\n",
     "        \"no_speech_prob\": segment.no_speech_prob,\n",
     "        \"compression_ratio\": segment.compression_ratio,\n",
-    "        \"start_formatted\": Utils.format_timestamp(segment.start),\n",
-    "        \"end_formatted\": Utils.format_timestamp(segment.end),\n",
+    "        \"start_formatted\": Utils.to_hms(segment.start),\n",
+    "        \"end_formatted\": Utils.to_hms(segment.end),\n",
     "        \"duration\": segment.end - segment.start,\n",
     "    }\n",
     "\n",
@@ -229,8 +235,8 @@
     "            \"start\": word.start,\n",
     "            \"end\": word.end,\n",
     "            \"probability\": word.probability,\n",
-    "            \"start_formatted\": Utils.format_timestamp(word.start),\n",
-    "            \"end_formatted\": Utils.format_timestamp(word.end),\n",
+    "            \"start_formatted\": Utils.to_hms(word.start),\n",
+    "            \"end_formatted\": Utils.to_hms(word.end),\n",
     "        }\n",
     "        for word in words\n",
     "    ]\n",
@@ -241,7 +247,7 @@
     "        \"language\": info.language,\n",
     "        \"language_probability\": info.language_probability,\n",
     "        \"duration\": info.duration,\n",
-    "        \"duration_formatted\": Utils.format_timestamp(info.duration),\n",
+    "        \"duration_formatted\": Utils.to_hms(info.duration),\n",
     "    }"
    ]
   },
@@ -399,8 +405,8 @@
     "                    \"speaker\": speaker,\n",
     "                    \"start\": turn.start,\n",
     "                    \"end\": turn.end,\n",
-    "                    \"start_formatted\": Utils.format_timestamp(turn.start),\n",
-    "                    \"end_formatted\": Utils.format_timestamp(turn.end),\n",
+    "                    \"start_formatted\": Utils.to_hms(turn.start),\n",
+    "                    \"end_formatted\": Utils.to_hms(turn.end),\n",
     "                    \"duration\": turn.end - turn.start,\n",
     "                }\n",
     "            )\n",
