--- a/notebooks/2r-extract-text.ipynb
+++ b/notebooks/2r-extract-text.ipynb
@@ -27,11 +27,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "import os\n",
     "import warnings\n",
     "import justsdk\n",
     "import pymupdf\n",
     "\n",
-    "from _constants import SAMPLE_DATA_DIR"
+    "from pathlib import Path\n",
+    "from configs._constants import SAMPLE_DATA_DIR"
    ]
   },
   {
@@ -47,6 +50,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ROOT = Path().resolve().parent\n",
+    "sys.path.append(str(ROOT))\n",
+    "os.chdir(ROOT)\n",
+    "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "TARGET_DIR = SAMPLE_DATA_DIR / \"text\"\n",
