refactor: QoL cleanup

--- a/notebooks/2r-extract-text.ipynb
+++ b/notebooks/2r-extract-text.ipynb
@@ -45,7 +45,7 @@
     "from typing import Dict, Optional\n",
     "from collections import Counter\n",
     "from wordcloud import WordCloud\n",
-    "from configs._constants import SAMPLE_DATA_DIR\n",
+    "from config._constants import SAMPLE_DATA_DIR\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "plt.style.use(\"seaborn-v0_8\")\n",
