feat: Update WhisperModel cache to default

--- a/notebooks/1r-transcribe-diarization.ipynb
+++ b/notebooks/1r-transcribe-diarization.ipynb
@@ -43,7 +43,7 @@
     "from IPython.display import Audio, display\n",
     "from pyannote.audio import Pipeline\n",
     "from pyannote.audio.pipelines.utils.hook import ProgressHook\n",
-    "from config._constants import HF_TOKEN, SAMPLE_DATA_DIR, MODEL_DIR\n",
+    "from config._constants import HF_READ_ONLY_TOKEN, SAMPLE_DATA_DIR, MODEL_DIR\n",
     "from src.utils import Utils\n",
     "\n",
     "\n",
@@ -64,7 +64,7 @@
     "        \"model_size\": \"base.en\",\n",
     "        \"compute_type\": \"int8\",\n",
     "        \"num_workers\": 2,\n",
-    "        \"local_files_only\": True,\n",
+    "        # \"local_files_only\": True,\n",
     "    },\n",
     "    \"transcription\": {\n",
     "        \"language\": \"en\",\n",
@@ -139,7 +139,7 @@
     "                \"compute_type\": self.config[\"whisper\"][\"compute_type\"],\n",
     "                \"num_workers\": self.config[\"whisper\"][\"num_workers\"],\n",
     "                \"download_root\": str(MODEL_DIR / \"whisper-base-en\"),\n",
-    "                \"local_files_only\": self.config[\"whisper\"][\"local_files_only\"],\n",
+    "                # \"local_files_only\": self.config[\"whisper\"][\"local_files_only\"],\n",
     "            }\n",
     "            model = WhisperModel(**model_params)\n",
     "            justsdk.print_success(\"Whisper model loaded successfully\")\n",
@@ -233,13 +233,13 @@
    "outputs": [],
    "source": [
     "class DiarizationEngine:\n",
-    "    def __init__(self, hf_token: str):\n",
-    "        self.pipeline = self._initialize_pipeline(hf_token)\n",
+    "    def __init__(self, hf_read_only_token: str):\n",
+    "        self.pipeline = self._initialize_pipeline(hf_read_only_token)\n",
     "\n",
-    "    def _initialize_pipeline(self, hf_token: str) -> Optional[Pipeline]:\n",
+    "    def _initialize_pipeline(self, hf_read_only_token: str) -> Optional[Pipeline]:\n",
     "        try:\n",
     "            pipeline = Pipeline.from_pretrained(\n",
-    "                \"pyannote/speaker-diarization-3.1\", use_auth_token=hf_token\n",
+    "                \"pyannote/speaker-diarization-3.1\", use_auth_token=hf_read_only_token\n",
     "            )\n",
     "\n",
     "            if torch.cuda.is_available():\n",
@@ -292,7 +292,7 @@
     "            return None\n",
     "\n",
     "\n",
-    "diarizer = DiarizationEngine(HF_TOKEN)"
+    "diarizer = DiarizationEngine(HF_READ_ONLY_TOKEN)"
    ]
   },
   {
