feat: Acquire more data

--- a/notebooks/1r-transcribe-diarization.ipynb
+++ b/notebooks/1r-transcribe-diarization.ipynb
@@ -43,7 +43,7 @@
     "from IPython.display import Audio, display\n",
     "from pyannote.audio import Pipeline\n",
     "from pyannote.audio.pipelines.utils.hook import ProgressHook\n",
-    "from config._constants import HF_READ_ONLY_TOKEN, SAMPLE_DATA_DIR, MODEL_DIR\n",
+    "from config._constants import HF_READ_ONLY_TOKEN, SAMPLE_DATA_DIR\n",
     "from src.utils import Utils\n",
     "\n",
     "\n",
@@ -138,7 +138,7 @@
     "                \"model_size_or_path\": self.config[\"whisper\"][\"model_size\"],\n",
     "                \"compute_type\": self.config[\"whisper\"][\"compute_type\"],\n",
     "                \"num_workers\": self.config[\"whisper\"][\"num_workers\"],\n",
-    "                \"download_root\": str(MODEL_DIR / \"whisper-base-en\"),\n",
+    "                # \"download_root\": str(MODEL_DIR / \"whisper-base-en\"),\n",
     "                # \"local_files_only\": self.config[\"whisper\"][\"local_files_only\"],\n",
     "            }\n",
     "            model = WhisperModel(**model_params)\n",
