refactor!: Rename to configs folder

--- a/notebooks/2r-extract-text.ipynb
+++ b/notebooks/2r-extract-text.ipynb
@@ -38,14 +38,16 @@
     "import seaborn as sns\n",
     "import re\n",
     "import textwrap\n",
-    "import docx\n",
+    "\n",
+    "# import docx\n",
     "import _root as _  # noqa: F401\n",
     "\n",
     "from pathlib import Path\n",
     "from typing import Dict, Optional\n",
     "from collections import Counter\n",
-    "from wordcloud import WordCloud\n",
-    "from config._constants import SAMPLE_DATA_DIR\n",
+    "\n",
+    "# from wordcloud import WordCloud\n",
+    "from configs._constants import SAMPLE_DATA_DIR\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "plt.style.use(\"seaborn-v0_8\")\n",
@@ -142,8 +144,8 @@
     "        try:\n",
     "            if extension == \".pdf\":\n",
     "                return self._extract_pdf(file_path)\n",
-    "            elif extension == \".docx\":\n",
-    "                return self._extract_docx(file_path)\n",
+    "            # elif extension == \".docx\":\n",
+    "            #     return self._extract_docx(file_path)\n",
     "            elif extension == \".txt\":\n",
     "                return self._extract_txt(file_path)\n",
     "            else:\n",
@@ -195,30 +197,30 @@
     "            \"processed_text\": self._process_text(raw_text),\n",
     "        }\n",
     "\n",
-    "    def _extract_docx(self, file_path: Path) -> Dict:\n",
-    "        doc = docx.Document(file_path)\n",
-    "        paragraphs = []\n",
+    "    # def _extract_docx(self, file_path: Path) -> Dict:\n",
+    "    #     doc = docx.Document(file_path)\n",
+    "    #     paragraphs = []\n",
     "\n",
-    "        for i, para in enumerate(doc.paragraphs):\n",
-    "            paragraphs.append(\n",
-    "                {\n",
-    "                    \"paragraph_number\": i + 1,\n",
-    "                    \"text\": para.text,\n",
-    "                    \"char_count\": len(para.text),\n",
-    "                    \"word_count\": len(para.text.split()),\n",
-    "                }\n",
-    "            )\n",
+    "    #     for i, para in enumerate(doc.paragraphs):\n",
+    "    #         paragraphs.append(\n",
+    "    #             {\n",
+    "    #                 \"paragraph_number\": i + 1,\n",
+    "    #                 \"text\": para.text,\n",
+    "    #                 \"char_count\": len(para.text),\n",
+    "    #                 \"word_count\": len(para.text.split()),\n",
+    "    #             }\n",
+    "    #         )\n",
     "\n",
-    "        raw_text = \"\\n\".join([para[\"text\"] for para in paragraphs])\n",
+    "    #     raw_text = \"\\n\".join([para[\"text\"] for para in paragraphs])\n",
     "\n",
-    "        return {\n",
-    "            \"file_name\": file_path.name,\n",
-    "            \"file_type\": \"DOCX\",\n",
-    "            \"metadata\": {\"paragraph_count\": len(paragraphs)},\n",
-    "            \"paragraphs\": paragraphs,\n",
-    "            \"raw_text\": raw_text,\n",
-    "            \"processed_text\": self._process_text(raw_text),\n",
-    "        }\n",
+    "    #     return {\n",
+    "    #         \"file_name\": file_path.name,\n",
+    "    #         \"file_type\": \"DOCX\",\n",
+    "    #         \"metadata\": {\"paragraph_count\": len(paragraphs)},\n",
+    "    #         \"paragraphs\": paragraphs,\n",
+    "    #         \"raw_text\": raw_text,\n",
+    "    #         \"processed_text\": self._process_text(raw_text),\n",
+    "    #     }\n",
     "\n",
     "    def _extract_txt(self, file_path: Path) -> Dict:\n",
     "        with open(file_path, \"r\", encoding=\"utf-8\", errors=\"ignore\") as f:\n",
@@ -635,24 +637,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, (ax1, ax2) = plt.subplots(1, 2, figsize=(16, 8))\n",
+    "fig, (_, ax2) = plt.subplots(1, 2, figsize=(16, 8))  # noqa: F811\n",
     "\n",
-    "if word_data[\"most_common_words\"]:\n",
-    "    word_freq_dict = dict(\n",
-    "        word_data[\"most_common_words\"][: CONFIG[\"analysis\"][\"wordcloud_max_words\"]]\n",
-    "    )\n",
+    "# NOTE: WordCloud is only for cosmetic, removing this dep for now\n",
+    "# if word_data[\"most_common_words\"]:\n",
+    "#     word_freq_dict = dict(\n",
+    "#         word_data[\"most_common_words\"][: CONFIG[\"analysis\"][\"wordcloud_max_words\"]]\n",
+    "#     )\n",
     "\n",
-    "    wordcloud = WordCloud(\n",
-    "        width=800,\n",
-    "        height=400,\n",
-    "        background_color=\"white\",\n",
-    "        max_words=CONFIG[\"analysis\"][\"wordcloud_max_words\"],\n",
-    "        colormap=\"viridis\",\n",
-    "    ).generate_from_frequencies(word_freq_dict)\n",
+    "#     wordcloud = WordCloud(\n",
+    "#         width=800,\n",
+    "#         height=400,\n",
+    "#         background_color=\"white\",\n",
+    "#         max_words=CONFIG[\"analysis\"][\"wordcloud_max_words\"],\n",
+    "#         colormap=\"viridis\",\n",
+    "#     ).generate_from_frequencies(word_freq_dict)\n",
     "\n",
-    "    ax1.imshow(wordcloud, interpolation=\"bilinear\")\n",
-    "    ax1.axis(\"off\")\n",
-    "    ax1.set_title(\"Word Cloud (Most Frequent Words)\", fontsize=14, fontweight=\"bold\")\n",
+    "#     ax1.imshow(wordcloud, interpolation=\"bilinear\")\n",
+    "#     ax1.axis(\"off\")\n",
+    "#     ax1.set_title(\"Word Cloud (Most Frequent Words)\", fontsize=14, fontweight=\"bold\")\n",
     "\n",
     "stats = analysis_result[\"basic_stats\"]\n",
     "structure_data = [\n",
