fix: Configs import in nb

--- a/notebooks/1r-transcribe-diarization.ipynb
+++ b/notebooks/1r-transcribe-diarization.ipynb
@@ -43,7 +43,7 @@
     "from IPython.display import Audio, display\n",
     "from pyannote.audio import Pipeline\n",
     "from pyannote.audio.pipelines.utils.hook import ProgressHook\n",
-    "from config._constants import HF_READ_ONLY_TOKEN, SAMPLE_DATA_DIR\n",
+    "from configs._constants import HF_READ_ONLY_TOKEN, SAMPLE_DATA_DIR\n",
     "from src.utils import Utils\n",
     "\n",
     "\n",
